Chrome OS: Remove DCHECK that asserts ethernet icon is not shown in tray

Bug: 844754
Change-Id: If928477917cc9c71c3533793959a143abd34ca7a
Reviewed-on: https://chromium-review.googlesource.com/1067759
Commit-Queue: Evan Stade <estade@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560720}
Former-commit-id: fe1286b42460af10112b9667e33c17f1f92e257f